--- a/BinaryTree.html
+++ b/BinaryTree.html
@@ -164,7 +164,7 @@
         tree.insert(20);
         tree.insert(18);
         tree.insert(25);
-        // console.log(tree);
+        console.log(tree);
         // console.log(tree.root);
         // //中序遍历BST
         // console.log(tree.inOrder());
