--- a/JS实例/calendar/index - 副本.htm
+++ b/JS实例/calendar/index - 副本.htm
@@ -17,7 +17,7 @@ hr{float:left;clear:both;width:100%;margin:15px 0 0 0;}
 </style> -->
 </head>
 <body>
-<center><a href="javascript:;" id="J_Cal_7">点我也能弹出日历（竖版）</a></center>
+<!-- <center><a href="javascript:;" id="J_Cal_7">点我也能弹出日历（竖版）</a></center>
 <h2>单个日历（本月）</h2>
 <div id="J_Cal_1"></div>
 <hr />
@@ -31,7 +31,7 @@ hr{float:left;clear:both;width:100%;margin:15px 0 0 0;}
 <div id="J_Cal_4"></div>
 <hr />
 <h2>四排日历（指定日期为2012年12月21日）显示上下月按钮</h2>
-<div id="J_Cal_5"></div>
+<div id="J_Cal_5"></div> -->
 <div id="box">
     <h5>选择日期</h5>
     <div class="item">
@@ -45,66 +45,66 @@ hr{float:left;clear:both;width:100%;margin:15px 0 0 0;}
         </select>
     </div>
 </div>
-<div id="copyright">铁马网络 <a href="http://www.ip3q.com">ip3q.com</a> , By &mdash; 铁马网络, QQ:173045138</div> -->
+<!-- <div id="copyright">铁马网络 <a href="http://www.ip3q.com">ip3q.com</a> , By &mdash; 铁马网络, QQ:173045138</div> -->
 <!--日历控件JS源码-->
 <script src="calendar.js"></script>
 <!--控件应用实例-->
 <script>
 var oToday = new Date();
-//单个日历（本月）
-var oCal_1 = new Calendar({
-	id: "#J_Cal_1"
-});
-//单个日历（本月）开启select选择
-var oCal_2 = new Calendar({
-	id: "#J_Cal_2",
-	isSelect: !0
-});
-oCal_2.on("dateClick", function(obj) {
-	alert(obj["data-date"])
-});
-//双日历（本月开始）选择范围 今天 —— 下个月的今天, 选择日期弹出相应日期及星期几
-var oCal_3 = new Calendar({
-	id: "#J_Cal_3",
-	count: 2,	
-	range: {mindate: oToday, maxdate: new Date(oToday.getFullYear(), oToday.getMonth() + 1, oToday.getDate())}
-});
-oCal_3.on("dateClick", function(obj) {
-	alert(obj["data-date"] + "\u3010"+ this.getDateInfo(obj["data-date"]).week +"\u3011")
-});
-//三日历（本月开始）显示上下月按钮, 2012——2020节假日特殊显示
-var oToday = new Date();
-var oCal_4 = new Calendar({
-	id: "#J_Cal_4",
-	isPrevBtn: !0,
-	isNextBtn: !0,
-	count: 3,
-	isHoliday: !0,
-	range: {mindate: "2012-01-01"}
-});
-oCal_4.on("dateClick", function(obj) {
-	var o = obj.children[0] || obj,
-		aA = _CAL.$("a", this.container),
-		i, oTmp;
-	//移出选择样式
-	for(i = aA.length; i--;) {
-		oTmp = aA[i].children[0] || aA[i];
-		_CAL.removeClass(oTmp, "selected")
-	};	
-	//增加选中样式	
-	_CAL.addClass(o, "selected");
+// //单个日历（本月）
+// var oCal_1 = new Calendar({
+// 	id: "#J_Cal_1"
+// });
+// //单个日历（本月）开启select选择
+// var oCal_2 = new Calendar({
+// 	id: "#J_Cal_2",
+// 	isSelect: !0
+// });
+// oCal_2.on("dateClick", function(obj) {
+// 	alert(obj["data-date"])
+// });
+// //双日历（本月开始）选择范围 今天 —— 下个月的今天, 选择日期弹出相应日期及星期几
+// var oCal_3 = new Calendar({
+// 	id: "#J_Cal_3",
+// 	count: 2,	
+// 	range: {mindate: oToday, maxdate: new Date(oToday.getFullYear(), oToday.getMonth() + 1, oToday.getDate())}
+// });
+// oCal_3.on("dateClick", function(obj) {
+// 	alert(obj["data-date"] + "\u3010"+ this.getDateInfo(obj["data-date"]).week +"\u3011")
+// });
+// //三日历（本月开始）显示上下月按钮, 2012——2020节假日特殊显示
+// var oToday = new Date();
+// var oCal_4 = new Calendar({
+// 	id: "#J_Cal_4",
+// 	isPrevBtn: !0,
+// 	isNextBtn: !0,
+// 	count: 3,
+// 	isHoliday: !0,
+// 	range: {mindate: "2012-01-01"}
+// });
+// oCal_4.on("dateClick", function(obj) {
+// 	var o = obj.children[0] || obj,
+// 		aA = _CAL.$("a", this.container),
+// 		i, oTmp;
+// 	//移出选择样式
+// 	for(i = aA.length; i--;) {
+// 		oTmp = aA[i].children[0] || aA[i];
+// 		_CAL.removeClass(oTmp, "selected")
+// 	};	
+// 	//增加选中样式	
+// 	_CAL.addClass(o, "selected");
 	
-	alert(obj["data-date"] + "\u3010"+ this.getDateInfo(obj["data-date"]).holiday +"\u3011")	
-});
-//四排日历（指定日期为2012年12月21日）显示上下月按钮
-var oCal_5 = new Calendar({
-	id: "#J_Cal_5",
-	isPrevBtn: !0,
-	isNextBtn: !0,
-	count: 4,
-	date: new Date(2012, 11),
-	selectDate: "2012-12-21"
-});
+// 	alert(obj["data-date"] + "\u3010"+ this.getDateInfo(obj["data-date"]).holiday +"\u3011")	
+// });
+// //四排日历（指定日期为2012年12月21日）显示上下月按钮
+// var oCal_5 = new Calendar({
+// 	id: "#J_Cal_5",
+// 	isPrevBtn: !0,
+// 	isNextBtn: !0,
+// 	count: 4,
+// 	date: new Date(2012, 11),
+// 	selectDate: "2012-12-21"
+// });
 //弹出式日历
 var oCal_6 = new Calendar({
 	id: "#J_Cal_6",
@@ -125,17 +125,17 @@ oCal_6.on("dateClick", function(obj) {
 	this.selectDate = obj["data-date"];
 });
 
-//文本触发的弹出日历（竖版）
-var oCal_7 = new Calendar({
-	id: "#J_Cal_7",
-	isPopup: !0,
-	isPrevBtn: !0,
-	isNextBtn: !0,
-	isCloseBtn: !0,
-	count: 2
-});
-//只要限制容器宽度即可
-oCal_7.container.style.width = 203 + "px";
+// //文本触发的弹出日历（竖版）
+// var oCal_7 = new Calendar({
+// 	id: "#J_Cal_7",
+// 	isPopup: !0,
+// 	isPrevBtn: !0,
+// 	isNextBtn: !0,
+// 	isCloseBtn: !0,
+// 	count: 2
+// });
+// //只要限制容器宽度即可
+// oCal_7.container.style.width = 203 + "px";
 </script>
 </body>
 </html>
