--- a/player.html
+++ b/player.html
@@ -25,7 +25,7 @@
     <!-- 
         ffmpeg 切割h264 aac标准 MP4
 ffmpeg -i oceans.mp4 -map 0 -codec:v libx264 -codec:a aac -f segment -segment_time 10 -segment_format_options movflags=+faststart out%03d.mp4
-ffmpeg -i haoxing_ppt.mp4 -map 0 -codec:v libx264 -codec:a aac -f segment -segment_time 10 -segment_list /tmp/hls/playlist.m3u8 /tmp/hls/out%03d.ts
+ffmpeg -i oceans.mp4 -map 0 -codec:v libx264 -codec:a aac -f segment -segment_time 10 -segment_list playlist.m3u8 out%03d.ts
 
 ffmpeg -re -i in.oceans -map 0 -codec:v libx264 -codec:a aac -f segment -segment_list playlist.m3u8 -segment_list_flags +live -segment_time 10 out%03d.mkv
 
