--- a/RequireJS/index3.html
+++ b/RequireJS/index3.html
@@ -10,10 +10,7 @@
 
 <body>
     <h1>Awsome require.js</h1>
-    <!-- <script data-main="scripts/main" src="scripts/require.min.js"></script>
-    <script src="scripts/config.js"></script> -->
-
-    <script src="scripts/require.min.js"></script>
+    <script data-main="scripts/main" src="scripts/require.min.js"></script>
     <script src="scripts/config.js"></script>
     <script>
         require(['jquery', 'math'], function ($, math) {
