--- a/videojs.html
+++ b/videojs.html
@@ -14,10 +14,10 @@
 
 <body>
     <!-- blob -->
-    <!-- <video id="my-player" class="video-js vjs-default-skin vjs-big-play-centered" controls preload="none" width="400" height="300">
-    </video> -->
+    <video id="my-player" class="video-js vjs-default-skin vjs-big-play-centered" controls preload="none" width="400" height="300">
+    </video>
 
-    <video id="my_video_2" class="video-js vjs-default-skin vjs-big-play-centered" controls preload="auto" width="640" height="268"></video>
+    <!-- <video id="my_video_2" class="video-js vjs-default-skin vjs-big-play-centered" controls preload="auto" width="640" height="268"></video> -->
     
     <!-- blob m3u8 -->
     <!-- <video id="my_video_1" class="video-js vjs-default-skin" controls preload="auto" width="640" height="268" 
@@ -61,8 +61,8 @@
                     sourceBuffer.appendBuffer(arrayBuffer);
                 });
         }
-        // videojs
-        var player = videojs('my_player_2')
+        // // videojs
+        // var player = videojs('my_video_2')
             
         /**
          * blob2 
