--- a/CSSdemo/circle-loading.html
+++ b/CSSdemo/circle-loading.html
@@ -10,8 +10,8 @@
         .con {
             position: relative;
             display: inline-block;
-            height: 200px;
-            width: 200px;
+            height: 60px;
+            width: 60px;
         }
 
         .percent-circle {
@@ -23,7 +23,7 @@
 
         .percent-circle-right {
             right: 0;
-            width: 100px;
+            width: 30px;
             border-radius: 0 100px 100px 0/0 100px 100px 0;
         }
 
@@ -35,11 +35,11 @@
             transform-origin: left center;
             transform: rotate(0deg);
             border-radius: 0 100px 100px 0/0 100px 100px 0;
-            background: #bbb;
+            background: #000;
         }
 
         .percent-circle-left {
-            width: 100px;
+            width: 30px;
             border-radius: 100px 0 0 100px/100px 0 0 100px;
         }
 
@@ -51,7 +51,7 @@
             transform-origin: right center;
             transform: rotate(0deg);
             border-radius: 100px 0 0 100px/100px 0 0 100px;
-            background: #bbb;
+            background: #000;
         }
 
         .text-circle {
@@ -59,10 +59,10 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            height: 80%;
-            width: 80%;
-            left: 10%;
-            top: 10%;
+            height: 90%;
+            width: 90%;
+            left: 5%;
+            top: 5%;
             border-radius: 100%;
             background: #000;
             color: #fff;
@@ -78,7 +78,7 @@
         <div class="percent-circle percent-circle-right">
             <div class="right-content"></div>
         </div>
-        <div class="text-circle">0%</div>
+        <div class="text-circle" style="font-size: 16px">0<em style="font-size: 12px;">%</em></div>
     </div>
     <script>
         var leftContent = document.querySelector(".left-content");
@@ -105,7 +105,7 @@
         }, 500);
 
         function setPercent(angle) {
-            textCircle.innerHTML = parseInt(angle * 100 / 360) + '%';
+            textCircle.innerHTML = parseInt(angle * 100 / 360) + '<em style="font-size: 12px">%</em>';
         }
     </script>
 </body>
